--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>G'day & kia ora./h1>
-<p>This is a paragrpah.</p>
+<h1>G'day & kia ora.</h1>
+<p>This is a paragraph.</p>
 </body>
 </html>
