--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Raleway">
+    <style>
+      body {
+        font-family: 'Raleway', sans-serif;
+        font-size: 48px;
+      }
+    </style>
+  </head>
 <body>
 <h1>G'day & kia ora.</h1>
 <p>This is a paragraph.</p>
